memory settings to make maven run properly, also reconfigured eclipse to not conflict with maven from command line.
Change-Id: I6eeb76968b28cf1a68ed72a44542f289929d448a